<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.view.MainActivity">
    
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@drawable/story_app_logo"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/welcomeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/app_tagline"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/white"
        app:cornerRadius="5dp"
        app:strokeWidth="1.5dp"
        app:strokeColor="@color/blue"
        android:textColor="@color/blue"
        app:layout_constraintCircleRadius="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>