<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".ui.view.AddStoryActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_your_story"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:layout_marginTop="-30dp"
        app:layout_constraintTop_toBottomOf="@id/previewImage" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/image_upload"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/camera"
        app:cornerRadius="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintTop_toBottomOf="@id/previewImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/galleryButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/gallery"
        app:cornerRadius="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintTop_toBottomOf="@id/previewImage"
        app:layout_constraintStart_toEndOf="@id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/description"
            android:lines="8" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/locationCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add your location"
        android:layout_marginStart="-4dp"
        app:layout_constraintStart_toEndOf="@id/locationCheck"
        app:layout_constraintTop_toTopOf="@id/locationCheck"
        app:layout_constraintBottom_toBottomOf="@id/locationCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/upload"
        app:cornerRadius="4dp"
        android:layout_marginTop="-4dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintTop_toBottomOf="@id/locationCheck"/>

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>